package com.example.planify.constans;

public enum Gender {
MALE,FEMALE, NO_SPECIFIC
}
